--- a/projetoExemplo/projetoExemplo/projetoExemplo.csproj
+++ b/projetoExemplo/projetoExemplo/projetoExemplo.csproj
@@ -8,7 +8,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
+    <NullableReferenceTypes>true</NullableReferenceTypes>
   </PropertyGroup>
 
 </Project>
